--- a/static/scss/generic/_page.scss
+++ b/static/scss/generic/_page.scss
@@ -65,7 +65,9 @@ body {
 }
 
 .main {
-  padding: 0 32px 8px 32px !important;
+  @media (max-width: 800px) {
+    padding: 0 32px 8px 32px !important;
+  }
 
   h2 {
     &:first-child {
